<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_lighter"
    android:layout_marginBottom="1dp">

    <ImageView
        android:id="@+id/coin_row_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin_row_date"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/generic" />

    <TextView
        android:id="@+id/coin_row_date"
        style="@style/coinRowText"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_9999"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin_row_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/namename"
        style="@style/coinRowText"
        app:layout_constraintStart_toEndOf="@+id/coin_row_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin_row_price"
        style="@style/coinRowText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/_9999_99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/coin_row_icon"
        app:layout_constraintTop_toBottomOf="@+id/coin_row_name" />

    <ImageView
        android:id="@+id/coin_iv_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_empty" />

    <TextView
        android:id="@+id/tv_MCap"
        style="@style/coinRowText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:gravity="right"
        android:text="@string/mcap"
        app:layout_constraintEnd_toStartOf="@+id/coin_iv_favorite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_24h"
        android:gravity="right"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_24h"
        style="@style/coinRowText"
        app:layout_constraintEnd_toEndOf="@+id/tv_MCap"
        app:layout_constraintTop_toBottomOf="@+id/tv_MCap" />

</androidx.constraintlayout.widget.ConstraintLayout>